welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: not found: value sortieTrouvée
while (!sortieTrouvée()){
        ^