welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var buggly=0;
while (!sortieTrouvée()){
	for (i<- 1 to 5){
		avance();
		if (estSurBiscuit)
			buggly=buggly+1
	}
	if (buggly>2)
		gauche();
	else
		droite();
	buggly=0;
}
